Changes for Filter Effects specification
----------------------------------------

2012-06-27  Dirk Schulze  <dschulze@adobe.com>

- again: use more SVG magic for shaders

2012-06-25  Dirk Schulze  <dschulze@adobe.com>

- use more SVG magic for shaders

2012-06-25  Dirk Schulze  <dschulze@adobe.com>

- added svg stack for shader concept - replaces PNGs

2012-06-25  Dirk Schulze  <dschulze@adobe.com>

- started adding shader processing model
- issue corrections on shader boxes

2012-06-22  Dirk Schulze  <dschulze@adobe.com>

- for now, the filter-margin properties just apply to filter function custom()

2012-06-22  Dirk Schulze  <dschulze@adobe.com>

- added index and property index
- cleanup of property defintions

2012-06-22  Dirk Schulze  <dschulze@adobe.com>

- added defintions for <box>
- cleanup of properties
- cleanup of defintions
- reordering of sections for a better readability

2012-06-21  Dirk Schulze  <dschulze@adobe.com>

- Added defintion for 'filter-margin(-bottom, -left. -right, -top)' properties

2012-06-20  Dirk Schulze  <dschulze@adobe.com>

- Change short hand to 'filter-effects' ny adding a link to TR state of spec

2012-06-20  Dirk Schulze  <dschulze@adobe.com>

- Cleanup of feCustom section

2012-06-20  Dirk Schulze  <dschulze@adobe.com>

- add description of mix function
- add first graphic for processing model of mix

2012-06-19  Dirk Schulze  <dschulze@adobe.com>

- added new paragraph about fragmentShader attribute

2012-06-19  Dirk Schulze  <dschulze@adobe.com>

- *-color properties follow the syntax of CSS Values and Units now

2012-06-19  Dirk Schulze  <dschulze@adobe.com>

- updated syntax for mix(..) function

2012-06-18  Dirk Schulze  <dschulze@adobe.com>

- updated property definition markup; Same like for CSS and SVG2 specs now
- added more information to head of spec

2012-06-18  Dirk Schulze  <dschulze@adobe.com>

- updated 'custom' syntax to latest proposal