@@ -3,6 +3,11 @@ Changes for Filter Effects specification
 
 2012-06-27  Dirk Schulze  <dschulze@adobe.com>
 
+- added description of mix function in the processing model
+- some tweaks to SVG images
+
+2012-06-27  Dirk Schulze  <dschulze@adobe.com>
+
 - again: use more SVG magic for shaders
 
 2012-06-25  Dirk Schulze  <dschulze@adobe.com>
